--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "test-jake": "jake test",
     "test": "jake test",
     "build-jake": "jake build",
-    "build": "npm run rollup && npm run uglify",
+    "build": "npm run rollup && npm run replace && npm run uglify",
     "release": "./build/publish.sh",
     "lint": "eslint src",
     "lintfix": "eslint src --fix",
     "rollup": "rollup -c build/rollup-config.js",
     "watch": "rollup -w -c build/rollup-watch-config.js",
-    "uglify": "uglifyjs dist/leaflet-src.js -c -m -o dist/leaflet.js"
+    "uglify": "uglifyjs dist/leaflet-src.js -c -m -o dist/leaflet.js",
+    "replace": "node ./build/replace-var.js"
   },
   "eslintConfig": {
     "root": true,
