--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "karma-rollup-plugin": "^0.2.4",
     "karma-safari-launcher": "~1.0.0",
     "leafdoc": "^1.4.1",
+    "leaflet-rotatedmarker": "^0.2.0",
     "mocha": "^3.1.0",
     "phantomjs-prebuilt": "^2.1.12",
     "prosthetic-hand": "^1.3.1",
@@ -91,5 +92,6 @@
     "gis",
     "map"
   ],
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "dependencies": {}
 }
