--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leaflet",
+  "name": "@twc/mosaic-leaflet",
   "version": "1.2.0",
   "description": "JavaScript library for mobile-friendly interactive maps",
   "devDependencies": {
@@ -29,7 +29,7 @@
     "ssri": "^4.1.2",
     "uglify-js": "~3.0.26"
   },
-  "main": "dist/leaflet-src.js",
+  "main": "dist/leaflet.js",
   "style": "dist/leaflet.css",
   "files": [
     "dist",
@@ -48,7 +48,7 @@
     "rollup": "rollup -c build/rollup-config.js",
     "watch": "rollup -w -c build/rollup-watch-config.js",
     "replace": "node ./build/replace-var.js",
-    "uglify": "uglifyjs dist/leaflet-src.js -c -m -o dist/leaflet.js --source-map filename=dist/leaflet.js.map --in-source-map dist/leaflet-src.js.map --source-map-url leaflet.js.map --comments",
+    "uglify": "uglifyjs dist/leaflet-src.js -c -m -o dist/leaflet.js --source-map dist/leaflet.js.map --in-source-map dist/leaflet-src.js.map --source-map-url leaflet.js.map --comments",
     "integrity": "nodejs ./build/integrity.js"
   },
   "eslintConfig": {
