--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twc-mosaic-leaflet",
+  "name": "@twc/mosaic-leaflet",
   "version": "1.3.1",
   "description": "JavaScript library for mobile-friendly interactive maps",
   "devDependencies": {
