--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@twc/mosaic-leaflet",
-  "version": "1.3.1",
+  "version": "1.3.1-rc.0",
   "description": "JavaScript library for mobile-friendly interactive maps",
   "devDependencies": {
     "eslint": "^4.5.0",
