--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@twc/mosaic-leaflet",
-  "version": "1.5.0",
-  "description": "JavaScript library for mobile-friendly interactive maps - upstream v1.4.0",
+  "name": "@twc/pangea-leaflet",
+  "version": "1.0.0",
+  "description": "LeafletJS SDK - upstream v1.4.0",
   "devDependencies": {
     "eslint": "^4.5.0",
     "eslint-config-mourner": "^2.0.1",
